# molock

./: .env.example  .gitignore  .gitleaks.toml  .trufflehog-exclude.txt  AGENTS.md  BENCHMARK-DOCKER.md  BENCHMARKING.md  Cargo.toml  LICENSE  Makefile  README.md
.ai/: .cursorrules  Agents.md  CONTRIBUTING.md  SECURITY.md  Skills.md  TDD_GUIDE.md
.ai/scripts/: add_license_headers.sh  find_untested_functions.sh
.github/workflows/: ci.yml  release.yml  slsa-verify.yml
benchmarks/: benchmark.sh  delay_benchmark.sh  health_benchmark.sh  post_benchmark.sh  users_benchmark.sh
config/: benchmark-config.yaml  benchmark-docker-config.yaml  molock-config.yaml
deployment/: Dockerfile  Dockerfile.simple  docker-compose.yml  grafana-dashboards.yml  grafana-datasources.yml  otel-collector-config.yaml  prometheus.yml
deployment/dashboards/: molock-overview.json  molock-overview.json.backup
src/: lib.rs  main.rs  main_simple.rs
src/config/: loader.rs  mod.rs  types.rs
src/rules/: executor.rs  matcher.rs  mod.rs  state.rs
src/server/: app.rs  handlers.rs  mod.rs  openapi.rs
src/telemetry/: attributes.rs  metrics.rs  mod.rs  otel_direct.rs  tracer.rs
src/utils/: mod.rs
tests/: corner_cases_integration_test.rs  integration_test.rs
