[package]
name = "molock"
version = "0.1.0"
edition = "2021"
description = "High-performance mock server for CI/CD pipelines and testing"
authors = ["Molock Team"]
license = "Apache-2.0"
repository = "https://github.com/fike/molock"
readme = "README.md"
keywords = ["mock-server", "testing", "http", "actix-web", "opentelemetry"]
categories = ["web-programming::http-server", "development-tools::testing"]

[features]
default = ["otel"]
otel = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "opentelemetry-http", "tracing-opentelemetry"]
hot-reload = ["notify"]

[dependencies]
actix-web = "4.0"
actix-rt = "2.0"
actix-service = "2.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
rand = "0.8"
dashmap = "5.0"
regex = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.0"
http = "1.0"
futures = "0.3"
lazy_static = "1.4"
arc-swap = "1.0"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.0"
mime = "0.3"

# OpenTelemetry dependencies
opentelemetry = { version = "0.31", features = ["metrics", "trace", "logs"], optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio", "trace"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto", "logs", "reqwest"], optional = true }
opentelemetry-http = { version = "0.31", optional = true }
opentelemetry-semantic-conventions = { version = "0.31", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

# Hot reload
notify = { version = "6.0", optional = true }

# OpenAPI / Swagger UI
utoipa = { version = "5", features = ["actix_extras"] }
utoipa-actix-web = "0.1"
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }

# Conditional evaluation
eval = "0.4"

# HTTP client for connectivity testing
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio-test = "0.4"
assert-json-diff = "2.0"
tempfile = "3.0"
wiremock = "0.5"
criterion = "0.5"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0
debug = true